@@ -5,6 +5,9 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
+- Change ``reload`` view name to more specific name ``reload_contacts``.
+  [elioschmutz]
+
 - Adjust contact_summary template to display the title in the details
   only if it is different than the organization name.
   This happens if you fill only an organization name without a first and last
